test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/spaced-variadic.widl
interface X {
    void operation(object . . . args);
};
